# Infantry

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: autoaim-param.yml  cameraParams_061.xml  cameraParams_156.xml  cameraParams_157.xml  cameraParams_332.xml  filter_param.yaml  model5.txt  model6.txt  params3.yml  params4.yml  params5.yml  params6.yml
record/: Record.cpp  Record.h
script/: install_ceres.sh  install_yaml-cpp.sh  start.sh
src/: CMakeLists.txt  common.cpp  common.h  tic_toc.h
src/IndusCamera/: DxImageProc.h  GxIAPI.h  camera_api.cpp  camera_api.h
src/armour/: armour.cpp  armour.h
src/base/: base.cpp  base.h
src/classifier/: Classifier.cpp  Classifier.h  num_classifier.cpp  num_classifier.h  svm.h
src/energy/: ArmourFinder.cpp  ArmourFinder.h  SolveSine.cpp  data_tpye.h  energy.cpp  energy.h  tool_fun.h
src/filter/: particle_filter.cpp  particle_filter.h
src/predictor/: AdaptiveEKF.hpp  EKFPredictor.cpp  EKFPredictor.h  kalman.cpp  kalman.h  kalman_filter.cpp  predictor.cpp  predictor.h
src/record/: Record.cpp
src/serial/: serial_port.cpp  serial_port.h
src/shooter/: shooter.cpp  shooter.h
src/topaimer/: Aimer.hpp  Ransac.cpp  StaticAimer.cpp  StaticAimer.hpp  TopAimer.yaml  aimer.cpp  antiTop.cpp  antiTop.h
